force-app/main/default/objects/Vehicle_Inspection_Summary__c/Vehicle_Inspection_Summary__c.object-meta.xml
<CustomObject>
    <label>Vehicle Inspection Summary</label>
    <nameField>
        <label>Vehicle Inspection Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Inspection Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>