force-app/main/default/objects/Vehicle_Inspection_Summary__c/fields/Approvar__c.field-meta.xml
<CustomField>
    <fullName>Approvar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approvar</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicle_Inspection_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>