force-app/main/default/objects/Vehicle_Inspection_Summary__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vehicle Inspection Summaries</relationshipLabel>
    <relationshipName>Vehicle_Inspection_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>